--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="pt-br">
   <head>
 
-    <link rel="preload" href="https://scripts.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/players/62bc9b65514ed100098e80a5/player.js" as="script">
+     <!-- Velocidade VTURB -->
+     
+    <link rel="preload" href="https://scripts.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/players/6302d478258f6e000de58bb8/player.js" as="script">
     <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-    <link rel="preload" href="https://images.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/players/62bc9b65514ed100098e80a5/thumbnail.jpg" as="image">
-    <link rel="preload" href="https://cdn.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/62bc99f654a6bc000a04d1c6/playlist.m3u8" as="fetch">
+    <link rel="preload" href="https://images.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/players/6302d478258f6e000de58bb8/thumbnail.jpg" as="image">
+    <link rel="preload" href="https://cdn.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/6302d44c7bdf45000b7982e3/playlist.m3u8" as="fetch">
     <link rel="dns-prefetch" href="https://cdn.converteai.net">
     <link rel="dns-prefetch" href="https://scripts.converteai.net">
     <link rel="dns-prefetch" href="https://images.converteai.net">
@@ -73,7 +75,7 @@
             <h2 class="my-4"><b>VITAMINA QUE MULTIPLICA LA GRASA MARRÓN Y TE HACE DERRETIR LA GRASA MALA INCLUSO MIENTRAS DUERMES </b></h2>
 
             <!-- VSL -->
-            <div id="vid_62bc9b65514ed100098e80a5" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62bc9b65514ed100098e80a5" src="https://images.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/players/62bc9b65514ed100098e80a5/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62bc9b65514ed100098e80a5" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62bc9b65514ed100098e80a5">var s=document.createElement("script");s.src="https://scripts.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/players/62bc9b65514ed100098e80a5/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <div id="vid_6302d478258f6e000de58bb8" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_6302d478258f6e000de58bb8" src="https://images.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/players/6302d478258f6e000de58bb8/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_6302d478258f6e000de58bb8" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_6302d478258f6e000de58bb8">var s=document.createElement("script");s.src="https://scripts.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/players/6302d478258f6e000de58bb8/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
