--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
      <!-- Velocidade VTURB -->
-     
+
     <link rel="preload" href="https://scripts.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/players/6302d478258f6e000de58bb8/player.js" as="script">
     <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
     <link rel="preload" href="https://images.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/players/6302d478258f6e000de58bb8/thumbnail.jpg" as="image">
@@ -30,7 +30,7 @@
     <style type="text/css">
       header {
         color: white;
-        background-image: url("assets/img/bg8.png");
+        background-image: url("assets/img/bg1.png");
         background-color: rgba(0, 0, 0, 0.6);
         background-position: center;
         background-size: cover;
@@ -79,7 +79,7 @@
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/g0ALSjq" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.hotmart.com/X72248283R" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUIERO TENER ACCESO!</span>
                 <span class="span-btn2">(atención: las plazas son limitadas)</span>
               </a>
@@ -456,7 +456,7 @@
             </div>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/g0ALSjq" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.hotmart.com/X72248283R" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUIERO TENER ACCESO!</span>
                 <span class="span-btn2">(atención: las plazas son limitadas)</span>
               </a>
@@ -473,7 +473,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 0); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1320000); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
