--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.hotmart.com/X72248283R" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.hotmart.com/T74144644M?checkoutMode=10" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUIERO TENER ACCESO!</span>
                 <span class="span-btn2">(atención: las plazas son limitadas)</span>
               </a>
@@ -456,7 +456,7 @@
             </div>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.hotmart.com/X72248283R" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.hotmart.com/T74144644M?checkoutMode=10" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUIERO TENER ACCESO!</span>
                 <span class="span-btn2">(atención: las plazas son limitadas)</span>
               </a>
