--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         background-position: center;
         background-size: cover;
         background-attachment: fixed;
-        background-blend-mode: darken;
+        background-blend-mode: ;
       }
     </style>
     
