--- a/psm/index.html
+++ b/psm/index.html
@@ -74,7 +74,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-10 text-center">
-            <h1><b><font color="black">INCREÍBLE VITAMINA QUE DERRITE LA GRASA  INCLUSO MIENTRAS DUERME</font></b></h1>
+            <h1><b><font color="black">INCREÍBLE VITAMINA QUE DERRITE LA PANZA  INCLUSO MIENTRAS DUERME</font></b></h1>
             <h4><b><font color="black"><font color="black">Todos los días alguien me pregunta cuál es mi SECRETO</font></b></h4>
             <h4><b><font color="black">Cada día me siento más CONFIADO....</font></b></h4>
           </div>
