--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h2 class="my-4"><b>VITAMINA QUE MULTIPLICA EL TEJIDO MARRÓN QUE TE HACE DERRETIR 11KG DE GRASA MALA EN 4 SEMANAS INCLUSO CUANDO DUERMES.</b></h2>
+            <h2 class="my-4"><b>VITAMINA QUE MULTIPLICA EL TEJIDO MARRÓN QUE TE HACE DERRETIR 11lbs DE GRASA MALA EN 4 SEMANAS INCLUSO CUANDO DUERMES.</b></h2>
 
             <!-- VSL -->
             <div id="vid_6302d478258f6e000de58bb8" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_6302d478258f6e000de58bb8" src="https://images.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/players/6302d478258f6e000de58bb8/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_6302d478258f6e000de58bb8" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_6302d478258f6e000de58bb8">var s=document.createElement("script");s.src="https://scripts.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/players/6302d478258f6e000de58bb8/player.js",s.async=!0,document.head.appendChild(s);</script>
