--- a/psm/index.html
+++ b/psm/index.html
@@ -54,7 +54,7 @@
       }
 
       body {
-        background-image: url("pz4.png");
+        background-image: url("pz5.png");
         background-position: center ;
         background-repeat: no-repeat;
         background-size: cover;
@@ -74,9 +74,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-10 text-center">
-            <h1><b><font color="black">INCREÍBLE VITAMINA QUE DERRITE LA PANZA  INCLUSO MIENTRAS DUERME</font></b></h1>
-            <h4><b><font color="black"><font color="black">Todos los días alguien me pregunta cuál es mi SECRETO</font></b></h4>
-            <h4><b><font color="black">Cada día me siento más CONFIADO....</font></b></h4>
+
           </div>
         </div>
       </div>
@@ -85,8 +83,8 @@
     <section class="py-5 ssec">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-11 text-center">
-            <a href="https://protolocovientrecero.com"><img class="img-fluid" src="video.png"></a>
+          <div class="col-lg-12 text-center">
+            <a href="https://protolocovientrecero.com"><img class="img-fluid" src="video2.png"></a>
             <!-- TROQUE SEU LINK ONDE ESTÁ O DO PROTOCOLOZEROBARRIGA.COM, MANTENDO AS ASPAS -->
             <a class="btn btn-success btn-lg p-4 mt-5" href="https://protolocovientrecero.com">QUIERO VER EL VIDEO</a>
           </div>
