--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <style type="text/css">
       header {
         color: white;
-        background-image: url("assets/img/bg1.png");
+        background-image: url("assets/img/bg1.webp");
         background-color: rgba(0, 0, 0, 0.6);
         background-position: center;
         background-size: cover;
