--- a/psm/index.html
+++ b/psm/index.html
@@ -43,9 +43,7 @@
       .fsec h4 {
         color:white;
       }
-      .ssec {
 
-      
       }
       .btn {
         font-size: 200%;
@@ -54,7 +52,7 @@
       }
 
       body {
-        background-image: url("pz5.png");
+        background-image: url("pz5.webp");
         background-position: center ;
         background-repeat: no-repeat;
         background-size: cover;
@@ -83,10 +81,10 @@
     <section class="py-5 ssec">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-12 text-center">
-            <a href="https://protolocovientrecero.com"><img class="img-fluid" src="video2.png"></a>
+          <div class="col-lg-11 text-center">
+            <a href="https://protolocovientrecero.com"><img class="img-fluid" src="video2.webp"></a>
             <!-- TROQUE SEU LINK ONDE ESTÁ O DO PROTOCOLOZEROBARRIGA.COM, MANTENDO AS ASPAS -->
-            <a class="btn btn-success btn-lg p-4 mt-5" href="https://protolocovientrecero.com">QUIERO VER EL VIDEO</a>
+            <a class="btn btn-success btn-lg p-4 mt-5" href="https://protolocovientrecero.com">  👉    QUIERO VER EL VIDEO    👈  </a>
           </div>
         </div>
       </div>
