--- a/psr/index.html
+++ b/psr/index.html
@@ -2,7 +2,9 @@
 <html lang="pt-br">
   <head>
 
-  <!-- Meta Pixel Code -->
+          <!-- Meta Pixel Code -->
+
+    <!-- Meta Pixel Code -->
           <script>
           !function(f,b,e,v,n,t,s)
           {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -18,11 +20,13 @@
           <noscript><img height="1" width="1" style="display:none"
           src="https://www.facebook.com/tr?id=577685124033946&ev=PageView&noscript=1"
           /></noscript>
-    <!-- End Meta Pixel Code -->        
+    <!-- End Meta Pixel Code -->
+
+    <!-- End Meta Pixel Code -->
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0572283b45.js"></script>
     <style type="text/css">
@@ -39,7 +43,7 @@
       .fsec h4 {
         color:white;
       }
-      
+
       }
       .btn {
         font-size: 200%;
@@ -68,7 +72,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-10 text-center">
-            
+
           </div>
         </div>
       </div>
@@ -78,9 +82,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-11 text-center">
-            <a href="https://hotm.art/INu2vt"><img class="img-fluid" src="video2.webp"></a>
+            <a href="https://protolocovientrecero.com"><img class="img-fluid" src="video2.webp"></a>
             <!-- TROQUE SEU LINK ONDE ESTÁ O DO PROTOCOLOZEROBARRIGA.COM, MANTENDO AS ASPAS -->
-            <a class="btn btn-success btn-lg p-4 mt-5" href="https://hotm.art/INu2vt">  👉    QUIERO VER EL VIDEO    👈  </a>
+            <a class="btn btn-success btn-lg p-4 mt-5" href="https://protolocovientrecero.com">  👉    QUIERO VER EL VIDEO    👈  </a>
           </div>
         </div>
       </div>
