--- a/psr/index.html
+++ b/psr/index.html
@@ -84,7 +84,7 @@
           <div class="col-lg-11 text-center">
             <a href="https://protolocovientrecero.com"><img class="img-fluid" src="video2.webp"></a>
             <!-- TROQUE SEU LINK ONDE ESTÁ O DO PROTOCOLOZEROBARRIGA.COM, MANTENDO AS ASPAS -->
-            <a class="btn btn-success btn-lg p-4 mt-5" href="https://protolocovientrecero.com">  👉    QUIERO VER EL VIDEO    👈  </a>
+            <a class="btn btn-success btn-lg p-4 mt-5" href="https://go.hotmart.com/S74158607R">  👉    QUIERO VER EL VIDEO    👈  </a>
           </div>
         </div>
       </div>
