--- a/psm/index.html
+++ b/psm/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
 
-      <!-- Meta Pixel Code -->
+    <!-- Meta Pixel Code -->
 
         <!-- Facebook Pixel Code -->
         <script>
@@ -24,97 +24,122 @@
         </noscript>
         <!-- End Facebook Pixel Code -->
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/0572283b45.js"></script>
-    <style type="text/css">
-      nav {
-        background-color: red;
-        color: white;
-      }
-      .fsec {
 
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <style>
+    @font-face {
+      font-family: Gotham Rounded;
+      src: url("font.otf") format("opentype");
+    }
+    *, *::before, *::after {
+      box-sizing: border-box;
+      font-family: Gotham Rounded;
+    }
+        body {
+      padding: 0;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100vw;
+      height: 100vh;
+      background: url("bg.webp") no-repeat fixed center;
+      background-size: cover;
+    }
+    .container {
+      width: 700px;
+      max-width: 90%;
+    }
+    .black {
+      background-color: #019B6A;
+      padding: 10px;
+      text-align: center;
+      border-radius: 20px;
+      box-shadow: 0 0 10px 2px;
+    }
+    .answer {
+      display: grid;
+      grid-template-columns: repeat(2, auto);
+      gap: 10px;
+    }
+    @media (max-width: 991px) {
+      .answer {
+        display: grid;
+        grid-template-columns: repeat(1, auto);
+        gap: 10px;
       }
-      .fsec h1 {
-        color: white;
-      }
-      .fsec h4 {
-        color:white;
-      }
-
-      }
-      .btn {
-        font-size: 200%;
-        font-family: 'Oswald', sans-serif;
-        white-space: normal;
-      }
-
-      body {
-        background-image: url("pz5.webp");
-        background-position: center ;
-        background-repeat: no-repeat;
-        background-size: cover;
-
-      }
-    </style>
-  </head>
-  <body>
-    
-    <nav class="navbar justify-content-center text-center">
-      <span class="lead">
-        <i class="fas fa-exclamation-triangle mr-2"></i>ATENCIÓN: Este video será eliminado el <span id="dia"></span> de <span id="mes"></span>, ¡disfrútalo mientras esté disponible!
-      </span>
-    </nav>
-
-    <section class="py-5 fsec">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-10 text-center">
-
-          </div>
+    }
+    .btn {
+      border-radius: 10px;
+      padding: 5px 10px;
+      font-size: 30px;
+      background-color: #013826;
+      outline: none;
+      text-decoration: none;
+      color: black;
+    }
+    .black h1 {
+      color: black;
+    }
+    .black p {
+      font-size: 18px;
+    }
+    .hide {
+      display: none;
+    }
+  </style>
+</head>
+<body> 
+  <div class="container">
+    <div class="black">
+      <div id="primeira">
+        <div class="question">
+          <h2>¿Te gustaría perder peso sin dejar de comer tus comidas favoritas?</h2>
+          <p></p>
+        </div>
+        <div class="answer">
+          <button class="btn" onclick="segunda()">SÍ</button>
+          <button class="btn" onclick="segunda()">NO</button>
         </div>
       </div>
-    </section>
-
-    <section class="py-5 ssec">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-11 text-center">
-            <a href="https://protolocovientrecero.com"><img class="img-fluid" src="video2.webp"></a>
-            <!-- TROQUE SEU LINK ONDE ESTÁ O DO PROTOCOLOZEROBARRIGA.COM, MANTENDO AS ASPAS -->
-            <a class="btn btn-success btn-lg p-4 mt-5" href="https://protolocovientrecero.com">  👉    QUIERO VER EL VIDEO    👈  </a>
-          </div>
+      <div id="segunda" class="hide">
+        <div class="question">
+          <h2>¿Quieres volver a tener autoestima?</h2>
+          <p></p>
+        </div>
+        <div class="answer">
+          <button class="btn" onclick="terceira()">SÍ</button>
+          <button class="btn" onclick="terceira()">NO</button>
         </div>
       </div>
-    </section>
-
-    <footer class="py-4 bg-dark text-white">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col text-center">
-            <a href="https://tecidomarromzerobarriga.online/termos" class="text-white font-weight-bold">Termos de uso</a> | <a href="https://tecidomarromzerobarriga.online/privacidade" class="text-white font-weight-bold">Política de privacidad</a>
-            <p class="font-weight-bold">Copyright 2022 - Todos los derechos reservados</p>
-            <p>Este sitio web no es parte del sitio web de Facebook o Facebook Inc. Además,</p>
-            <p class="mb-0">Este sitio NO está respaldado por Facebook de ninguna manera. FACEBOOK es una marca registrada de FACEBOOK, Inc.</p>
-          </div>
+      <div id="terceira" class="hide">
+        <div class="question">
+          <h2> ¡Toma tu oportunidad!!</h2>
+          <p>El siguiente video tiene un límite para que lo vean muy pocas personas al mismo tiempo... ¿Tienes intención de verlo hasta el final?</p>
+        </div>
+        <div class="answer">
+          <button class="btn" onclick="redirect()">SÍ</button>
+          <button class="btn" onclick="redirect()">NO</button>
         </div>
       </div>
-    </footer>
-    
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script>
-      monName = new Array ("janeiro", "fevereiro", "março", "abril", "maio", "junho", "julho", "agosto", "setembro", "outubro", "novembro", "dezembro")
-
-      var data = new Date();
-      var dia = data.getDate();
-      var mes = monName[data.getMonth()];
-
-      document.getElementById("dia").innerHTML = dia
-      document.getElementById("mes").innerHTML = mes
-    </script>
-  </body>
+    </div>
+    <p style="text-align: center; font-weight: bold;">© 2022 – Todos los derechos reservados. Este sitio no forma parte ni está avalado por Facebook. Facebook es una marca comercial de Facebook, Inc.</p>
+    <p style="text-align: center; font-weight: bold;"><a href="https://tecidomarromzerobarriga.online/termos" style="color: black;">Termos de Uso</a> | <a href="https://tecidomarromzerobarriga.online/privacidade" style="color: black;">Política de Privacidade</a></p>
+  </div>
+  <script>
+    function segunda() {
+      document.getElementById("primeira").classList.add("hide")
+      document.getElementById("segunda").classList.remove("hide")
+    }
+    function terceira() {
+      document.getElementById("segunda").classList.add("hide")
+      document.getElementById("terceira").classList.remove("hide")
+    }
+    function redirect() {
+      location.href = "https://protolocovientrecero.com" // SEU LINK AQUI
+    }
+  </script>
+</body>
 </html>
