--- a/psr/index.html
+++ b/psr/index.html
@@ -61,17 +61,12 @@
     </style>
   </head>
   <body>
-    
-    <nav class="navbar justify-content-center text-center">
-      <span class="lead">
-        <i class="fas fa-exclamation-triangle mr-2"></i>ATENCIÓN: Este video será eliminado el <span id="dia"></span> de <span id="mes"></span>, ¡disfrútalo mientras esté disponible!
-      </span>
-    </nav>
-
     <section class="py-5 fsec">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-10 text-center">
+          <div class="col-lg-12 text-center">
+         
+            <h1><b>UN PLACER KARINA, PASÉ DEL 107 AL 73 CON ESTE SECRETITO.</b></h1>
 
           </div>
         </div>
@@ -81,10 +76,11 @@
     <section class="py-5 ssec">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-11 text-center">
-            <a href="https://protolocovientrecero.com"><img class="img-fluid" src="video2.webp"></a>
+          <div class="col-lg-12 text-center">
+            <a href="https://protolocovientrecero.com"><img class="img-fluid" src="vagas.webp"></a>
             <!-- TROQUE SEU LINK ONDE ESTÁ O DO PROTOCOLOZEROBARRIGA.COM, MANTENDO AS ASPAS -->
-            <a class="btn btn-success btn-lg p-4 mt-5" href="https://go.hotmart.com/S74158607R">  👉    QUIERO VER EL VIDEO    👈  </a>
+            <h4><font color="BLACK">PRESIONA PARA VER</font></h4>
+            <a class="btn btn-success btn-lg p-4 mt-5" href="https://protolocovientrecero.com">  👉    QUIERO VER EL VIDEO    👈  </a>
           </div>
         </div>
       </div>
