--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://protolocovientrecero.com" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.hotmart.com/T74144644M?checkoutMode=10" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUIERO TENER ACCESO!</span>
                 <span class="span-btn2">(atención: las plazas son limitadas)</span>
               </a>
