--- a/index.html
+++ b/index.html
@@ -73,10 +73,19 @@
 
             <!-- Headline -->
             <h2 class="my-4"><b>PASÉ DEL 109 AL 73 CON 41 Y DECIDÍ COMPARTIR</b></h2>
-            <h4><b><font color="black">(ÚSALO ANTES QUE TODOS) ESTA BEBIDA CAMBIO MI VIDA</font><b></h4>
+            <h4><b><font color="black">(ÚSALO ANTES QUE TODOS)</font><b></h4>
+            <h5><b><font color="black">ESTA BEBIDA CAMBIO MI VIDA</font></b></h5> 
+            <h2 class="my-4"></h2>  
 
             <!-- VSL -->
             <div id="vid_6302d478258f6e000de58bb8" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_6302d478258f6e000de58bb8" src="https://images.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/players/6302d478258f6e000de58bb8/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_6302d478258f6e000de58bb8" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_6302d478258f6e000de58bb8">var s=document.createElement("script");s.src="https://scripts.converteai.net/3716fc14-d1ee-4a58-baa1-b1c4b045d8c6/players/6302d478258f6e000de58bb8/player.js",s.async=!0,document.head.appendChild(s);</script>
+
+            <span id="number"></span> Personas están viendo el video ahora mismo!
+
+            <script>
+            function add(){number+=Math.floor((Math.random()*6)+1);document.getElementById("number").innerHTML=number;setTimeout("add()",10000);}        
+            function generate(){number=Math.floor(Math.random()*1143)+1578;document.getElementById("number").innerHTML=number;add();}
+            generate();</script>
 
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
@@ -87,7 +96,10 @@
             </div>
 
             <!-- Termos de Uso e Política de Privacidade -->
-            <div class="text-white mt-4"><a href="termos.html" class="text-white">Condiciones de uso</a> | <a href="privacidade.html" class="text-white">Política de privacidad</a></div>
+            <div class="text-white mt-5"><a href="termos.html" class="text-white"><a href="https://tecidomarromzerobarriga.online/termos" class="text-white font-weight-bold"><font color="black">Termos de Uso</font></a> | <a href="https://tecidomarromzerobarriga.online/privacidade" class="text-white font-weight-bold"><font color="black">Política de Privacidade</font></a>
+            <p class="font-weight-bold"><font color="black">Copyright 2022 - Todos os Direitos Reservados</font></p>
+            <p class="font-weight-bold"><font color="black">Este site não faz parte do site do Facebook ou Facebook Inc. Além disso,</font></p>
+            <p class="font-weight-bold"><font color="black">Este site NÃO é endossado pelo Facebook de forma alguma. FACEBOOK é uma marca registrada da FACEBOOK, Inc.</font></p>
           </div>
         </div>
       </div>
