--- a/usflacidez/index.html
+++ b/usflacidez/index.html
@@ -96,6 +96,22 @@ src="https://www.facebook.com/tr?id=241477268300911&ev=PageView
 &noscript=1"/>
 </noscript>
 <!-- End Facebook Pixel Code -->
+    
+    CODIGO HTML UPSELL:
+
+<!-- HOTMART - Upsell Widget -->
+<div id="box_hotmart"></div>
+<script src="https://pay.hotmart.com/assets/js/hotmart.upsell_checkout.js"></script>
+
+<script>
+opts = {
+key: 'USL-100662-301526-68cb9ab5d777b678e29ac1e858b25c1f',
+width: '650' ,
+height: '420'
+};
+Upsell.Widget.show(opts);
+</script>
+<!-- HOTMART - Upsell Widget [end] -->
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
