--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
              
             <div class="volume">
             <img src="./assets/volume.png" alt="">
-            <span> 🔊 <font color="black">🔊 Asegúrate de que el sonido esté encendido.</font></span>
+            <span>  <font color="black">🔊 Asegúrate de que el sonido esté encendido.</font></span>
             </div>
 
             <!-- Botão 1 -->
