--- a/usflacidez/index.html
+++ b/usflacidez/index.html
@@ -86,7 +86,7 @@
               <p class="lead">Advertencia: ¡Tus amigas te suplicarán que les reveles tu "secreto milagroso" para hacer desaparecer la flacidez del <span class="font-italic">vientre casi de <span class="under">la noche a la mañana!</span></span>!</p>
             </li>
             <li>
-              <p class="lead">El secreto de las mujeres "delgadas a pesar de todo" que comen <span class="under">MUCHO</span>… pero que siempre atraen miradas de admiración con su <span class="font-italic">envidiable cuerpo</span>… ¡incluso sin ir al gimnasio! De hecho, lo que te diferencia de ellas es este único <span class="font-italic">“detalle”</span> fácil de ajustar</p>
+              <p class="lead">El secreto de las mujeres delgada a pesar de una dieta poco saludable, que comen <span class="under">MUCHO</span>… pero que siempre atraen miradas de admiración con su <span class="font-italic">envidiable cuerpo</span>… ¡incluso sin ir al gimnasio! De hecho, lo que te diferencia de ellas es este único <span class="font-italic">“detalle”</span> fácil de ajustar</p>
             </li>
             <li>
               <p class="lead">La gran <span class="under">mentira</span> del "ejercicio físico"... ¡y por qué el 96% de las personas están engordando rápidamente debido a este inocente error! (Ver página 20)</p>
