--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col text-center">
-            <a href="https://tecidomarromzerobarriga.online/termos" class="text-white font-weight-bold">Termos de Uso</a> | <a href="https://tecidomarromzerobarriga.online/privacidade" class="text-white font-weight-bold">Política de Privacidade</a>
+            <a href="https://protolocovientrecero.com/termos" class="text-white font-weight-bold">Termos de Uso</a> | <a href="https://protolocovientrecero.com/privacidade" class="text-white font-weight-bold">Política de Privacidade</a>
             <p class="font-weight-bold">Copyright 2023 - Todos los Derechos Reservados</p>
             <p>Este sitio web no forma parte del sitio web de Facebook o Facebook Inc. Además,</p>
             <p class="mb-0">Este sitio web NO está respaldado de ninguna manera por Facebook. FACEBOOK es una marca registrada de FACEBOOK, Inc.</p>
