--- a/usflacidez/index.html
+++ b/usflacidez/index.html
@@ -23,7 +23,7 @@
     s.parentNode.insertBefore(t,s)}(window,document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
      fbq('init', '2069378563251690'); 
-    fbq('track', 'PageView');
+    fbq('track', 'USFLACIDEZ');
     </script>
     <noscript>
      <img height="1" width="1" 
@@ -43,7 +43,7 @@
     s.parentNode.insertBefore(t,s)}(window,document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
      fbq('init', '173036012357476'); 
-    fbq('track', 'PageView');
+    fbq('track', 'USFLACIDEZ');
     </script>
     <noscript>
      <img height="1" width="1" 
